--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body{
     height: 100vh;
     width: 100%;
-    background: linear-gradient(#f5eeeb,#f86045);
+    background: linear-gradient(#f71818,#f86045,#e3c44c);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,7 +25,7 @@ body{
 }
 
 .container{
-    width: 360px;
+    width: 400px;
     padding: 15px;
     background: rgba(255, 255,255, 0.1);
     border-radius: 12px;
@@ -51,14 +51,14 @@ body{
     cursor: pointer;
     height: 65px;
     color: white;
-    width: calc(100% /4 - 10px);
+    width: calc(100% /5 - 10px);
     background: transparent;
     border-radius: 12px;
     margin-top: 15px;
 }
 
 .container input[type="button"]:hover{
-    color: aqua;
+    color: rgb(6, 6, 6);
     background: rgba(255, 255, 255,0.1);
 }
 
